add more media type tests and urlencoded with partially constant body (#327)
