# src/test-routes/media-types.ts
@@ -18,4 +18,22 @@ app.category("vanilla", () => {
       };
     }
   });
+  app.post("/mediatypes/binaryBodyTwoContentTypes", "MediaTypesTwoContentTypes", (req) => {
+    const contentType = req.headers["content-type"];
+    if (contentType === "application/json") {
+      req.expect.bodyEquals({ hello: "world" });
+      return {
+        status: 200,
+      };
+    } else if (contentType === "application/octet-stream") {
+      req.expect.bodyNotEmpty();
+      return {
+        status: 200,
+      };
+    } else {
+      return {
+        status: 400,
+      };
+    }
+  });
 });
